[FIX] website: can't scroll too long dropdown menu
Issue

	- Install "Website" module
	- Go to the website
	- Then Pages -> Edit Menu
	- Add at least 30 item under an one menu item then save

	When clicking on the menu, it is not possible to scroll to check
	last item in dropwdown menu.

Solution

	Add a maximum height of 60vh to the dropdown witn a
	2nd level scroll.
	For mobile, on top menu, let default height with no scroll.
	Since 13.0, it will also alter Mega Menu dropdown.

opw-2313014

closes odoo/odoo#55977

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1031,6 +1031,18 @@ table.table_desc tr td {
     }
 }
 
+// Navbar Dropdown Menu
+header > .navbar > * .dropdown-menu {
+    max-height: 60vh;
+    overflow-y: auto;
+}
+
+header.o_affix_enabled > .navbar > * .dropdown-menu {
+    @include media-breakpoint-down(md) {
+        max-height: 100%;
+    }
+}
+
 // Copyright
 .o_footer_copyright {
     padding: 8px;
